--- a/AZ-APP-RICHI-2/Pages/Index.cshtml
+++ b/AZ-APP-RICHI-2/Pages/Index.cshtml
@@ -7,4 +7,6 @@
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core"> Release 1</a>.</p>
+
+    <h3> @ViewData["Greeting"]  </h3>
 </div>
